--- a/TelaMain.html
+++ b/TelaMain.html
@@ -13,9 +13,10 @@
 <body class="bg-secondary h-100">
     <!-- container principal -->
     <nav class="nav nav-pills nav-fill flex-column  position-fixed h-auto text-center">
-        <a class=" btn btn-primary" href="#">Perfil</a>
+        <a class=" btn btn-primary" href="profile/index.html">Perfil</a>
         <a class="btn btn-primary mt-5 mb-5" href="#">Busca</a>
         <a class="btn btn-primary" href="#">Info</a>
+        <a class="btn btn-primary" href="index.html">Sair</a>
         </nav>
     <div class="container bg-white mt-3 pt-2">
 
@@ -516,7 +517,7 @@
             </ul>
         </div>
 
-        <!-- barra de menu -->
+
         
     </div>
     <script src="bootstrap/js/bootstrap.min.js"></script>
