--- a/login.html
+++ b/login.html
@@ -14,7 +14,7 @@
         <div class="modal-content rounded-5 shadow">
         <div class="modal-header p-5 pb-4 border-bottom-0">
             <!-- <h5 class="modal-title">Modal title</h5> -->
-            <h2 class="fw-bold mb-0 text-center">Cadastre-se Gratuitamente </h2>
+            <h2 class="fw-bold mb-0 text-center">Entre </h2>
         </div>
 
         <div class="modal-body p-5 pt-0">
@@ -27,22 +27,20 @@
                 <input type="password" class="form-control rounded-4" id="floatingPassword" placeholder="Password">
                 <label for="floatingPassword">Senha</label>
             </div>
-            <a  class="w-100 mb-2 btn btn-primary rounded-4" href="TelaMain.html" role="button" >Cadastrar</a>
-            <a  class="w-100 mb-2 btn btn-primary rounded-4" href="login.html" role="button" >Entrar</a>
-            <small class="text-muted">Clicando em cadastrar, você esta concordando com os termos de uso</small>
+            <a  class="w-100 mb-2 btn btn-primary rounded-4" href="TelaMain.html" role="button" >Entrar</a>
             <hr class="my-4">
             <h2 class="fs-5 fw-bold mb-3">Ou use outras alternativas</h2>
             <button class="w-100 py-2 mb-2 btn btn-outline-dark rounded-4" type="submit">
-                Cadastre-se com o Twitter
-                <img  src="imagens/twitter.png" alt="">
+                Entre com o Twitter
+                <img src="imagens/twitter.png" >
             </button>
             <button class="w-100 py-2 mb-2 btn btn-outline-primary rounded-4" type="submit">
-                Cadastre-se com o Facebook
-                <img  src="imagens/facebook.png" alt="">
+                Entre com o Facebook
+                <img src="imagens/facebook.png" >
             </button>
             <button class="w-100 py-2 mb-2 btn btn-outline-secondary rounded-4" type="submit">
-                Cadastre-se com o Google
-                <img  src="imagens/google.png" alt="">
+                Entre com o Google
+                <img src="imagens/google.png" alt="">
             </button>
             </form>
         </div>
