--- a/index.html
+++ b/index.html
@@ -12,9 +12,10 @@
     <div class="modal modal-signin text-center position-static d-block bg-secondary py-5" tabindex="-1" role="dialog" id="modalSignin">
     <div class="modal-dialog text-center" role="document">
         <div class="modal-content rounded-5 shadow">
-        <div class="modal-header p-5 pb-4 border-bottom-0">
+        <div class="modal-header  d-block p-5 pb-4 border-bottom-0">
+            <img class="w-75" src="imagens/logo2.jpg" alt="">
             <!-- <h5 class="modal-title">Modal title</h5> -->
-            <h2 class="fw-bold mb-0 text-center">Cadastre-se Gratuitamente </h2>
+            <h2 class="fw-bold mt-2 mb-0 text-center">Cadastre-se </h2>
         </div>
 
         <div class="modal-body p-5 pt-0">
