--- a/login.html
+++ b/login.html
@@ -12,7 +12,8 @@
     <div class="modal modal-signin text-center position-static d-block bg-secondary py-5" tabindex="-1" role="dialog" id="modalSignin">
     <div class="modal-dialog text-center" role="document">
         <div class="modal-content rounded-5 shadow">
-        <div class="modal-header p-5 pb-4 border-bottom-0">
+        <div class="modal-header d-block p-5 pb-4 border-bottom-0">
+            <img class="w-75" src="imagens/logo2.jpg" alt="">
             <!-- <h5 class="modal-title">Modal title</h5> -->
             <h2 class="fw-bold mb-0 text-center">Entre </h2>
         </div>
