--- a/profile/index.html
+++ b/profile/index.html
@@ -4,10 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-
   
-  <title>Frontend Mentor | Profile card component</title>
+  <title>Perfil</title>
   <link rel="stylesheet" href="../bootstrap/css/bootstrap.min.css">
   <link rel="stylesheet" href="css/design.css">
   <link rel="stylesheet" href="css/fonts.css">
